# Peach_Bot

./: README  TODO  bagstuff.sh  fixeth.sh  frames.gv  key_teleop.py  local.sh  local2.sh  remote.sh  remote2.sh  run_mapping.sh  run_simple.sh  rviz.sh  setup.sh  startup.sh  teleop.sh  waypoints.txt  webcamtest.py  webcamtest2.py
AutonomousControl/: AutonomousControl.ino
AutonomousControlBrokenEncoders/: AutonomousControlBrokenEncoders.ino
AutonomousControlMicro/: AutonomousControlMicro.ino
EncoderTestBasic/: EncoderTestBasic.ino
ManualControl/: ManualControl.ino
catkin_ws/: build.sh  kinetic-ros_comm-wet.rosinstall
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/build_isolated/actionlib_msgs/: CTestTestfile.cmake
catkin_ws/build_isolated/catkin/: CTestTestfile.cmake
catkin_ws/build_isolated/class_loader/: CTestTestfile.cmake
catkin_ws/build_isolated/cmake_modules/: CTestTestfile.cmake
catkin_ws/build_isolated/common_msgs/: CTestTestfile.cmake
catkin_ws/build_isolated/cpp_common/: CTestTestfile.cmake
catkin_ws/src/: .rosinstall
catkin_ws/src/catkin/: .tar
catkin_ws/src/eddiebot_line_follower/: CMakeLists.txt  manifest.xml  package.xml  packagenew.xml
catkin_ws/src/eddiebot_line_follower/cfg/: params.cfg
catkin_ws/src/eddiebot_line_follower/launch/: eddiebot_line_follower.launch
catkin_ws/src/eddiebot_line_follower/param/: standalone.yaml
catkin_ws/src/eddiebot_line_follower/src/: eddiebot_line_follower.cpp  eddiebot_line_follower_node.cpp
devel/: .catkin  .rosinstall  setup.sh
install/: fixlibs.sh  install.sh
(+1206 files in other folders)
